--- a/miniProjects/1_diceSimulator/index.html
+++ b/miniProjects/1_diceSimulator/index.html
@@ -9,12 +9,11 @@
   <body>
     <h1>Dice Rolling Simulator</h1>
     <div id="dice" class="dice">&#9856;</div>
-    <div id="dice" class="dice">&#9857;</div>
-    <div id="dice" class="dice">&#9858;</div>
-    <div id="dice" class="dice">&#9859;</div>
-    <div id="dice" class="dice">&#9860;</div>
-    <div id="dice" class="dice">&#9861;</div>
     <button id="button-roll">Roll Dice</button>
+    <ul id="roll-history">
+      <li>Roll 1: <span>&#9856;</span></li>
+      <li>Roll 2: <span>&#9860;</span></li>
+    </ul>
     <script src="script.js"></script>
   </body>
 </html>
